--- a/src/TLB/CoreBundle/Resources/config/routing.yml
+++ b/src/TLB/CoreBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 core_homepage:
     path: /
-    defaults: { _controller: TLBCoreBundle:Core:index }
+    defaults: { _controller: "TLBCoreBundle:Core:index" }
