--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,3 +69,10 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+vich_uploader:
+    db_driver: orm
+    mappings:
+        school_logo:
+            uri_prefix: /images/schoolLogo
+            upload_destination: '%kernel.root_dir%/../web/images/schoolLogo'
