--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "doctrine/annotations": "^1.4",
+        "vich/uploader-bundle": "^1.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
